# api-gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  config.yaml.example  config.yaml.prod  docker-compose.yml  openapi.html  openapi.yaml  package-lock.json  package.json  sync-openapi.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  renovate.json
.github/workflows/: deploy-aks.yaml  docker-deploy.yml  openapi.yml  rust.yml  sync-openapi.yml
docs/: .last_updated  alert-openapi.yaml
kubernetes/: api-gateway-deployment.yaml
src/: main.rs
src/config/: logger.rs  mod.rs  openapi.rs  parser.rs
src/utils/: http.rs
static/: openapi.html  openapi.yaml
