[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.215", features = ["derive"] }
serde_yaml = "=0.9.34"
tokio = { version = "=1.41.1", features = ["full"] }
hyper = { version = "=1.5.0", features = ["full"] }
reqwest = { version = "=0.12.9", features = ["json"] }
log = "=0.4.22"
hyper-util = { version = "=0.1.10", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "=0.1.2"
kafka = "=0.10.0"
serde_json = "=1.0.133"
chrono = "=0.4.38"
uuid = { version = "=1.11.0", features = [ "v4" ] }
openapiv3 = "=2.0.0"
walkdir = "=2.5.0"
iptools = "=0.3.0"
