[package]
name = "hypergate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.217", features = ["derive"] }
serde_yaml = "=0.9.34"
tokio = { version = "=1.42.0", features = ["full"] }
hyper = { version = "=1.5.2", features = ["full"] }
reqwest = { version = "=0.12.12", features = ["json"] }
log = "=0.4.22"
hyper-util = { version = "=0.1.10", features = ["server", "http1", "http2", "tokio", "service"] }
http-body-util = "=0.1.2"
kafka = "=0.10.0"
serde_json = "=1.0.134"
chrono = "=0.4.39"
uuid = { version = "=1.11.0", features = ["v4"] }
openapiv3 = "=2.0.0"
walkdir = "=2.5.0"
iptools = "=0.3.0"
clap = "=4.5.23"
tower-http = { version = "=0.6.2", features = ["cors"] }
tower = { version = "0.5.1", features = ["util"] }
